deploy/scoreboard/overlays/prod/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scoreboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "256k"
spec:
  rules:
    - host: scoreboard.ctf.example.com   # TODO: replace with real Route53 zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scoreboard
                port:
                  number: 80
  tls:
    - hosts:
        - scoreboard.ctf.example.com
      secretName: scoreboard-tls
